--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Socket.io</title>
+    <title>Socket.io chat</title>
   </head>
   <body>
+    <ul id="messages"></ul>
+    <form id="form">
+      <input id="input" autocomplete="off" />
+      <button>Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
       const socket = io();
-      socket.on("connect", () => console.log("socket connected to the server"));
+      const messages = document.getElementById("messages");
+      const form = document.getElementById("form");
+      const input = document.getElementById("input");
+      socket.on("chat message", (msg) => {
+        const li = document.createElement("li");
+        li.textContent = msg;
+        messages.appendChild(li);
+      });
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        if (input.value) {
+          socket.emit("chat message", input.value);
+          input.value = "";
+        }
+      });
     </script>
   </body>
 </html>
